--- a/src/assets/style/imports/fonts.css
+++ b/src/assets/style/imports/fonts.css
@@ -1,4 +1,3 @@
-/* Works Sans (Google fonts)
 @font-face {
   font-family: 'Work Sans';
   src: url('../../../../public/fonts/worksans/WorkSans-Light.ttf');
@@ -34,4 +33,4 @@
 @font-face {
   font-family: 'space Mono';
   src: url('../../../../public/fonts/mono/SpaceMono-Bold.ttf');
-} */
+}
